--- a/client/components/users/settings/settings.html
+++ b/client/components/users/settings/settings.html
@@ -17,36 +17,6 @@
     </div>
   </div>
 
-  <!-- PASSWORD -->
-  <div class='form-group'>
-    <label>Password</label>
-    <input
-      name='password'
-      type='password'
-      class='form-control'
-      ng-model='vm.user.password'
-      required>
-    <div ng-messages='settingsForm.password.$error' ng-show='vm.submitAttempted'>
-      <p ng-message='required' class='text-warning'>A password is required.</p>
-    </div>
-  </div>
-
-  <!-- PASSWORD CONFIRMATION -->
-  <div class='form-group'>
-    <label>Password Confirmation</label>
-    <input
-      name='passwordConfirmation'
-      type='password'
-      class='form-control'
-      ng-model='vm.user.passwordConfirmation'
-      required
-      confirm-password='vm.user.password'>
-    <div ng-messages='settingsForm.passwordConfirmation.$error' ng-show='vm.submitAttempted'>
-      <p ng-message='required' class='text-warning'>A password confirmation is required.</p>
-      <p ng-message='passwordsMatch' class='text-warning'>Passwords don't match.</p>
-    </div>
-  </div>
-
   <!-- SUBMIT BUTTON -->
   <button
     type='submit'
@@ -55,8 +25,14 @@
   </button>
 </form>
 
-<hr />
 
+<!-- CHANGE PASSWORD -->
+<hr />
+<a
+  class='btn btn-link'
+  ui-sref='change-password({ id: vm.user._id })'>
+  Change Password
+</a>
 <!-- DELETE ACCOUNT -->
 <button
   class='btn btn-danger'
