--- a/client/components/users/changePassword/changePassword.html
+++ b/client/components/users/changePassword/changePassword.html
@@ -12,7 +12,7 @@
       class='form-control'
       ng-model='vm.user.password'
       required>
-    <div ng-messages='changePasswordForm.password.$error' ng-show='vm.submitAttempted'>
+    <div ng-messages='changePasswordForm.password.$error' ng-show='vm.invalidSubmitAttempted'>
       <p ng-message='required' class='text-warning'>A password is required.</p>
     </div>
   </div>
@@ -27,7 +27,7 @@
       ng-model='vm.user.passwordConfirmation'
       required
       confirm-password='vm.user.password'>
-    <div ng-messages='changePasswordForm.passwordConfirmation.$error' ng-show='vm.submitAttempted'>
+    <div ng-messages='changePasswordForm.passwordConfirmation.$error' ng-show='vm.invalidSubmitAttempted'>
       <p ng-message='required' class='text-warning'>A password confirmation is required.</p>
       <p ng-message='passwordsMatch' class='text-warning'>Passwords don't match.</p>
     </div>
