--- a/client/src/components/navbar/navbar.directive.html
+++ b/client/src/components/navbar/navbar.directive.html
@@ -1,3 +1,5 @@
+<div id='navbar-template'>
+
 <nav class='navbar navbar-default'>
   <div class='container'>
     <!-- left side -->
@@ -21,3 +23,5 @@
     </ul>
   </div>
 </nav>
+
+</div>
