--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -1,6 +1,6 @@
 
-a {
-  cursor: pointer; }
+#home-template h1 {
+  color: black; }
 
-h1 {
-  color: red; }
+#navbar-template a {
+  cursor: pointer; }
