--- a/client/src/components/users/login/login.html
+++ b/client/src/components/users/login/login.html
@@ -1,5 +1,5 @@
 <div class='row'>
-  <div class='col-md-6'>
+  <div class='col-md-5'>
 
     <alert type='danger' ng-show='vm.invalidCredentials' close='vm.closeAlert()'>
       Invalid username/password.
@@ -47,7 +47,7 @@
     </form>
 
   </div>
-  <div class='col-md-6'>
+  <div class='col-md-6 col-md-offset-1'>
     <div class='page-header'>
       <h1>SSO</h1>
     </div>
