- Remove console.logs - Not using mongoose.connection.collections['users'] - Using $window.href = '/auth/facebook'

--- a/client/src/components/users/signup/signup.html
+++ b/client/src/components/users/signup/signup.html
@@ -70,7 +70,7 @@
 
     <p>Log in or register with:</p>
     <a ng-click='vm.facebook()' class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a>
-    <a href="/auth/twitter" class="btn btn-info"><span class="fa fa-twitter"></span> Twitter</a>
-    <a href="/auth/google" class="btn btn-danger"><span class="fa fa-google"></span> Google</a>
+    <a ng-click='vm.twitter()' class="btn btn-info"><span class="fa fa-twitter"></span> Twitter</a>
+    <a ng-click='vm.google()' class="btn btn-danger"><span class="fa fa-google"></span> Google</a>
   </div>
 </div>
