--- a/client/src/components/users/settings/settings.html
+++ b/client/src/components/users/settings/settings.html
@@ -10,7 +10,7 @@
       name='username'
       type='text'
       class='form-control'
-      ng-model='vm.user.username'
+      ng-model='vm.user.local.username'
       required>
     <div ng-messages='settingsForm.username.$error' ng-show='vm.invalidSubmitAttempted'>
       <p ng-message='required' class='text-warning'>A username is required.</p>
