--- a/client/src/components/users/changePassword/changePassword.html
+++ b/client/src/components/users/changePassword/changePassword.html
@@ -10,7 +10,7 @@
       name='password'
       type='password'
       class='form-control'
-      ng-model='vm.user.password'
+      ng-model='vm.user.local.password'
       required>
     <div ng-messages='changePasswordForm.password.$error' ng-show='vm.invalidSubmitAttempted'>
       <p ng-message='required' class='text-warning'>A password is required.</p>
@@ -24,9 +24,9 @@
       name='passwordConfirmation'
       type='password'
       class='form-control'
-      ng-model='vm.user.passwordConfirmation'
+      ng-model='vm.user.local.passwordConfirmation'
       required
-      confirm-password='vm.user.password'>
+      confirm-password='vm.user.local.password'>
     <div ng-messages='changePasswordForm.passwordConfirmation.$error' ng-show='vm.invalidSubmitAttempted'>
       <p ng-message='required' class='text-warning'>A password confirmation is required.</p>
       <p ng-message='passwordsMatch' class='text-warning'>Passwords don't match.</p>
