--- a/client/src/components/home/home.html
+++ b/client/src/components/home/home.html
@@ -2,15 +2,19 @@
 
 <div class='jumbotron'>
   <h1>Tango</h1>
-  <p>To think well, there really needs to be some sort of back-and-forth.</p>
-  <p>It's hard to do that by yourself, but this app helps.</p>
+  <p>Thinking is difficult.<p>
+  <ol>
+    <li>Because you need back-and-forth, and it's hard to get that by yourself.</li>
+    <li>Because it's hard to keep track of the nested structure of your logic.</li>
+  </ol>
+  <p>Tango intends to help mitigate these problems.</p>
 </div>
 
 <iframe width="640" height="360" src="https://www.youtube.com/embed/ImE6-3GuvhE?start=645" frameborder="0" allowfullscreen></iframe>
 
 <hr />
 
-<div ng-show='vm.currentUser._id'>
+<div ng-hide='vm.currentUser._id'>
   <p>Log in or register with:</p>
   <a ng-click='vm.facebook()' class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a>
   <a ng-click='vm.twitter()' class="btn btn-info"><span class="fa fa-twitter"></span> Twitter</a>
