--- a/client/src/components/navbar/navbar.directive.html
+++ b/client/src/components/navbar/navbar.directive.html
@@ -5,7 +5,7 @@
     <!-- left side -->
     <ul class='nav navbar-nav'>
       <li><a ui-sref='home'>Home</a></li>
-      <li><a ui-sref='createTango'>Create Tango</a></li>
+      <li><a ui-sref='tango:new'>Create Tango</a></li>
       <li ng-if='vm.currentUser'><a ui-sref='profile({ id: vm.currentUser._id })'>My Tangos</a></li>
       <li><a>{{ vm.currentUser }}</a></li>
     </ul>
