--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -1,6 +1,92 @@
+/* apply a natural box layout model to all elements, but allowing components to change */
+html {
+  box-sizing: border-box; }
+
+*, *:before, *:after {
+  box-sizing: inherit; }
+
 a {
   cursor: pointer; }
 
 #home-template h1 {
   color: black; }
 
+
+.tango-directive-template .tango {
+  margin-bottom: 20px; }
+  .tango-directive-template .tango .left-icons {
+    display: inline-block;
+    text-align: right;
+    width: 67px; }
+    .tango-directive-template .tango .left-icons img, .tango-directive-template .tango .left-icons .author {
+      position: relative;
+      bottom: 15px;
+      margin-right: 5px; }
+    .tango-directive-template .tango .left-icons img {
+      height: 20px; }
+    .tango-directive-template .tango .left-icons .author {
+      border: 1px solid gray;
+      border-radius: 25px;
+      padding: 10px; }
+  .tango-directive-template .tango textarea {
+    font-size: 18px;
+    width: 700px;
+    line-height: 135%;
+    padding: 8px 16px;
+    resize: none;
+    border: 1px solid white;
+    overflow: hidden; }
+  .tango-directive-template .tango textarea:focus {
+    outline: none;
+    border: 1px solid gray;
+    overflow: auto; }
+  .tango-directive-template .tango .menu {
+    width: 750px; }
+    .tango-directive-template .tango .menu span {
+      float: right;
+      margin-left: 15px;
+      cursor: pointer; }
+
+.tango-directive-template .level-0 {
+  position: relative;
+  left: 0px; }
+
+.tango-directive-template .level-1 {
+  position: relative;
+  left: 65px; }
+
+.tango-directive-template .level-2 {
+  position: relative;
+  left: 130px; }
+
+.tango-directive-template .level-3 {
+  position: relative;
+  left: 195px; }
+
+.tango-directive-template .level-4 {
+  position: relative;
+  left: 260px; }
+
+.tango-directive-template .level-5 {
+  position: relative;
+  left: 325px; }
+
+.tango-directive-template .level-6 {
+  position: relative;
+  left: 390px; }
+
+.tango-directive-template .level-7 {
+  position: relative;
+  left: 455px; }
+
+.tango-directive-template .level-8 {
+  position: relative;
+  left: 520px; }
+
+.tango-directive-template .level-9 {
+  position: relative;
+  left: 585px; }
+
+.tango-directive-template .level-10 {
+  position: relative;
+  left: 650px; }
