--- a/client/src/states/tangos/directive/tango.directive.scss
+++ b/client/src/states/tangos/directive/tango.directive.scss
@@ -4,19 +4,26 @@
     .left-icons {
       display: inline-block;
       text-align: right;
-      width: 67px;
+      width: 110px;
+      line-height: 100%;
+      vertical-align: top;
       img, .author {
-        position: relative;
-        bottom: 15px;
         margin-right: 5px;
+        vertical-align: top;
+        line-height: 100%;
       }
       img {
-        height: 20px;
+        height: 15px;
+        position: relative;
+        top: 15px;
       }
       .author {
         border: 1px solid gray;
         border-radius: 25px;
-        padding: 10px;
+        padding: 5px;
+        position: relative;
+        top: 15px;
+        word-wrap: break-word;
       }
     }
     textarea {
@@ -27,6 +34,7 @@
       resize: none;
       border: 1px solid white;
       overflow: hidden;
+      vertical-align: bottom;
     }
     textarea:focus {
       outline: none;
@@ -34,7 +42,9 @@
       overflow: auto; // only have scroll bar when focused
     }
     .menu {
-      width: 750px;
+      margin-top: 5px;
+      position: relative;
+      right: 335px;
       span {
         float: right;
         margin-left: 15px;
