--- a/client/src/states/tangos/directive/statement.directive.scss
+++ b/client/src/states/tangos/directive/statement.directive.scss
@@ -1,5 +1,5 @@
-.tango-directive-template {
-  .tango {
+.statement-directive-template {
+  .statement {
     margin-bottom: 20px;
     .left-icons {
       display: inline-block;
