Fixed tooltip + used clearfix

--- a/client/src/assets/app.scss
+++ b/client/src/assets/app.scss
@@ -9,3 +9,13 @@ html {
 a {
   cursor: pointer;
 }
+
+.clear:before,
+.clear:after {
+    content: " ";
+    display: table;
+}
+
+.clear:after {
+    clear: both;
+}
