--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -8,6 +8,14 @@ html {
 a {
   cursor: pointer; }
 
+.clear:before,
+.clear:after {
+  content: " ";
+  display: table; }
+
+.clear:after {
+  clear: both; }
+
 #home-template h1 {
   color: black; }
 
@@ -50,8 +58,9 @@ a {
     overflow: auto; }
   .statement-directive-template .statement .menu {
     margin-top: 5px;
+    width: 810px;
     position: relative;
-    right: 335px; }
+    right: 5px; }
     .statement-directive-template .statement .menu span {
       float: right;
       margin-left: 15px;
