--- a/client/src/states/tangos/directive/statement.directive.scss
+++ b/client/src/states/tangos/directive/statement.directive.scss
@@ -43,8 +43,9 @@
     }
     .menu {
       margin-top: 5px;
+      width: 810px;
       position: relative;
-      right: 335px;
+      right: 5px;
       span {
         float: right;
         margin-left: 15px;
