--- a/client/src/states/tangos/statementDirective/statement.directive.scss
+++ b/client/src/states/tangos/statementDirective/statement.directive.scss
@@ -44,6 +44,7 @@
     .menu {
       margin-top: 5px;
       width: 810px;
+      height: 20px;
       position: relative;
       right: 5px;
       span {
