--- a/client/src/states/tangos/statementDirective/statement.directive.scss
+++ b/client/src/states/tangos/statementDirective/statement.directive.scss
@@ -16,6 +16,7 @@
         height: 15px;
         position: relative;
         top: 15px;
+        cursor: pointer;
       }
       .author {
         border: 1px solid gray;
