Can edit the title of a tango

--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -20,6 +20,17 @@ a {
   color: black; }
 
 
+#new-tango-template .page-header h1 {
+  cursor: pointer; }
+
+#new-tango-template .page-header input {
+  font-size: 36px;
+  font-weight: 500; }
+
+#new-tango-template .page-header input:focus {
+  outline: none;
+  border: 1px solid gray; }
+
 .statement-directive-template .statement {
   margin-bottom: 20px; }
   .statement-directive-template .statement .left-icons {
