--- a/client/src/assets/app.scss
+++ b/client/src/assets/app.scss
@@ -1,4 +1,4 @@
-/* apply a natural box layout model to all elements, but allowing components to change */
+// apply a natural box layout model to all elements, but allowing components to change
 html {
   box-sizing: border-box;
 }
@@ -10,6 +10,7 @@ a {
   cursor: pointer;
 }
 
+// clearfix
 .clear:before,
 .clear:after {
     content: " ";
@@ -18,4 +19,10 @@ a {
 
 .clear:after {
     clear: both;
+}
+
+// inputs have solid gray outline instead of blue
+input:focus, textarea:focus {
+  outline: none;
+  border: 1px solid gray;
 }
