--- a/client/src/states/tangos/statementDirective/statement.directive.scss
+++ b/client/src/states/tangos/statementDirective/statement.directive.scss
@@ -25,6 +25,7 @@
         position: relative;
         top: 15px;
         word-wrap: break-word;
+        cursor: pointer;
       }
     }
     textarea {
