--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -4,7 +4,7 @@ html {
 *, *:before, *:after {
   box-sizing: inherit; }
 
-a {
+a, .glyphicon {
   cursor: pointer; }
 
 .clear:before,
@@ -18,9 +18,6 @@ a {
 input:focus, textarea:focus {
   outline: none;
   border: 1px solid gray; }
-
-#home-template h1 {
-  color: black; }
 
 
 #new-tango-template .page-header h1 {
@@ -53,6 +50,9 @@ input:focus, textarea:focus {
     cursor: pointer; }
   #new-tango-template .sims .glyphicon-plus {
     margin-top: 10px; }
+
+#home-template h1 {
+  color: black; }
 
 .statement-directive-template .statement {
   margin-bottom: 20px; }
