--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -14,6 +14,14 @@ input:focus, textarea:focus {
   outline: none;
   border: 1px solid gray; }
 
+.alert {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  margin: 1px; }
+
 .clear:before,
 .clear:after {
   content: " ";
@@ -23,7 +31,8 @@ input:focus, textarea:focus {
   clear: both; }
 
 .new-tango-template .page-header h1 {
-  cursor: pointer; }
+  cursor: pointer;
+  display: inline-block; }
 
 .new-tango-template .page-header input {
   font-size: 36px;
