Margin applied to bottom of page

--- a/client/src/assets/app.scss
+++ b/client/src/assets/app.scss
@@ -29,6 +29,10 @@ input:focus, textarea:focus {
   margin: 1px;
 }
 
+.container {
+  margin-bottom: 25px;
+}
+
 // clearfix
 .clear:before,
 .clear:after {
