--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -51,6 +51,28 @@ button.az-loading {
   width: 100%;
   height: 100%; }
 
+.home-template h1 {
+  margin-bottom: 20px; }
+
+.home-template img, .home-template iframe {
+  width: 100%; }
+
+.home-template .content h3 {
+  margin-top: 0; }
+
+.home-template .content blockquote {
+  font-size: 14px;
+  margin: 10px 0; }
+
+.home-template .content ul {
+  margin-bottom: 50px;
+  list-style-type: circle; }
+  .home-template .content ul li {
+    font-size: 18px; }
+    .home-template .content ul li .embed-responsive {
+      margin-top: 20px;
+      margin-bottom: 20px; }
+
 .new-tango-template .sims {
   border: 1px solid lightGray;
   padding: 5px;
