--- a/client/src/states/users/myTangos/myTangos.scss
+++ b/client/src/states/users/myTangos/myTangos.scss
@@ -1,17 +1,9 @@
 .my-tangos-template {
-  ul {
-    margin-top: 10px;
-    list-style-type: circle;
-    //padding-left: 0;
+  table {
+    width: 700px;
 
-    li {
-      font-size: 18px;
-      margin-bottom: 15px;
-
-      span.glyphicon-trash {
-        display: inline-block;
-        margin-left: 5px;
-      }
+    input[type='checkbox'] {
+      cursor: pointer;
     }
   }
 }
