--- a/client/src/assets/app.scss
+++ b/client/src/assets/app.scss
@@ -24,3 +24,43 @@ input:focus, textarea:focus {
   z-index: 1;
   margin: 1px;
 }
+
+// sims
+.sims {
+  border: 1px solid lightGray;
+  padding: 5px;
+  width: 650px;
+
+  label {
+    font-weight: normal;
+  }
+  input {
+    margin-bottom: 5px;
+    padding: 4px 8px;
+    border: 1px solid gray;
+  }
+  .sim-name {
+    width: 5em;
+    margin-right: 5px;
+  }
+  .sim-description {
+    width: 400px;
+  }
+  .glyphicon-plus, .glyphicon-remove {
+    cursor: pointer;
+  }
+  .glyphicon-plus {
+    margin-top: 10px;
+  }
+}
+
+.sim-modal {
+  blockquote {
+    font-size: 14px;
+  }
+  img {
+    width: 60%;
+    display: block;
+    margin: 0 auto;
+  }
+}
